samples/_failures_safe/1761275410_2bb67f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd8c84ae.c: In function ‘main’:
./samples/SAFE/__tmp_dd8c84ae.c:161:5: error: expected declaration or statement at end of input
  161 |     }
      |     ^
